// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Content /> should render <List /> when files dropped are dropped 1`] = `
<section
  className="jsx-1759955757 "
>
  <ul
    className="jsx-565981134"
  >
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
  </ul>
  <ul
    className="jsx-631033484"
  >
    <li
      className="jsx-3663839241 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
    <li
      className="jsx-3663839241 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
  </ul>
</section>
`;

exports[`<Content /> should render <List /> when there are results 1`] = `
<section
  className="jsx-1759955757 "
>
  <ul
    className="jsx-631033484"
  >
    <li
      className="jsx-3663839241 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
    <li
      className="jsx-3663839241 "
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
    />
  </ul>
</section>
`;

exports[`<Content /> should show <Drop /> when there is no searchQuery and no files dropped 1`] = `
<section
  className="jsx-1759955757 "
>
  <div
    className="jsx-246188302"
  >
    <FakeDropzone
      activeStyle={
        Object {
          "border": "1px dashed red",
        }
      }
      onDrop={undefined}
      preventDropOnDocument={true}
      style={
        Object {
          "border": "1px dashed rgba(202, 203, 204, 1)",
          "borderRadius": "5px",
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <p
        className="jsx-246188302"
      >
        Drop an episode or season...
      </p>
    </FakeDropzone>
  </div>
</section>
`;

exports[`<Content /> should show <ListEmpty /> when there is a query but no results 1`] = `
<section
  className="jsx-1759955757 "
>
  <ul
    className="jsx-565981134"
  >
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
    <li
      className="jsx-565981134"
    />
  </ul>
</section>
`;
